Revert "fixing the breadcrumbs on mobile"
This reverts commit 7148f1d5ddb08ad6c8614d9403918d78ab3c7454.

--- a/sass/navigation/_breadcrumbs.scss
+++ b/sass/navigation/_breadcrumbs.scss
@@ -4,15 +4,4 @@
   z-index: 2;
   margin-bottom: -40px;
   position: relative;
-
-  @media only screen and (max-width : $small-screen-up) {
-    position: fixed;
-    top: 45px;
-    width: 100%;
-    padding-left: 20px;
-    padding-bottom: 10px;
-    background-color: $color__background-body;
-    
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
-  }
 }
